tests/NormalTests/paczka1/small_fuzzy/90764043.err
Error in line 1: qWys S358 12,9
Error in line 8: tiZi2 S358 51,1
